--- a/app/views/surgeries/index.html.erb
+++ b/app/views/surgeries/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Surgeries Available</h1>
 <% @surgeries.each do |surgery| %>
   <section id="surgery-<%= surgery.id %>">
-    <h3><%= surgery.title %></h3>
+    <h3><%= link_to surgery.title, "surgeries/#{surgery.id}" %></h3>
         <%= surgery.doctors.each do |doctor| %>
           <h4><%= doctor.name %></h4>
         <% end %>
